# swiss-democracy-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  README.de.md  README.md  SECURITY.de.md  SECURITY.md  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
audits/2026-06-02T031038-Z-swiss-democracy-mcp/: _gen_findings.py  audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-06-02T031038-Z-swiss-democracy-mcp/findings/: ARCH-002-arch-002.md  ARCH-003-arch-003.md  ARCH-004-arch-004.md  ARCH-005-arch-005.md  ARCH-008-arch-008.md  ARCH-011-arch-011.md  ARCH-012-arch-012.md  CH-004-ch-004.md  OBS-001-obs-001.md  OBS-002-obs-002.md  OBS-003-obs-003.md  OPS-001-ops-001.md  OPS-002-ops-002.md  OPS-003-ops-003.md  SCALE-002-scale-002.md  SDK-001-sdk-001.md  SDK-002-sdk-002.md  SDK-003-sdk-003.md  SDK-004-sdk-004.md  SEC-004-sec-004.md  SEC-005-sec-005.md  SEC-007-sec-007.md  SEC-009-sec-009.md  SEC-013-sec-013.md  SEC-016-sec-016.md  SEC-019-sec-019.md  SEC-021-sec-021.md
audits/2026-06-02T031038-Z-swiss-democracy-mcp/raw/: ARCH-001.txt  ARCH-002.txt  ARCH-003.txt  ARCH-004.txt  ARCH-005.txt  ARCH-006.txt  ARCH-007.txt  ARCH-008.txt  ARCH-009.txt  ARCH-011.txt  ARCH-012.txt  CH-004.txt  OBS-001.txt  OBS-002.txt  OBS-003.txt  OBS-004.txt  OPS-001.txt  OPS-002.txt  OPS-003.txt  SCALE-002.txt  SDK-001.txt  SDK-002.txt  SDK-003.txt  SDK-004.txt  SEC-004.txt  SEC-005.txt  SEC-006.txt  SEC-007.txt  SEC-008.txt  SEC-009.txt  SEC-013.txt  SEC-016.txt  SEC-018.txt  SEC-019.txt  SEC-020.txt  SEC-021.txt
audits/2026-06-02T035936-Z-swiss-democracy-mcp/: _gen_findings.py  audit-meta.json  audit-report.md  profile.yaml  summary.json  verification-results.json
docs/: roadmap.md  secret-management.md  security.md
src/swiss_democracy_mcp/: __init__.py  server.py
tests/: test_server.py
(+43 files in other folders)
