[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-democracy-mcp"
version = "0.1.0"
description = "MCP server for Swiss direct democracy data: Swissvotes (1848+), BFS opendata.swiss, SRGSSR Polis (1900+)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "model-context-protocol",
    "swiss-open-data",
    "swiss-public-data-mcp",
    "switzerland",
    "democracy",
    "volksabstimmung",
    "abstimmung",
    "wahlen",
    "swissvotes",
    "python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
swiss-democracy-mcp = "swiss_democracy_mcp.server:mcp.run"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-democracy-mcp"
Repository = "https://github.com/malkreide/swiss-democracy-mcp"
"Bug Tracker" = "https://github.com/malkreide/swiss-democracy-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_democracy_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: marks tests as requiring network access (deselect with '-m not live')"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
